Significant refactor of the structure of fasteners.
