# api-lambda/src/main/java/com/gridgrizzly/api/model/ShankType.java
@@ -1,0 +1,15 @@
+package com.gridgrizzly.api.model;
+
+public enum ShankType {
+    SMOOTH,
+    FULLY_THREADED,
+    PARTIALLY_THREADED,
+    SHOULDER,
+    RING,
+    SPIRAL,
+    BARBED,
+    SQUARE_NECK,
+    RIBBED_NECK,
+    TAPERED,
+    OTHER
+}
